kubernetes/apps/netbird/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbird-server
  namespace: netbird
spec:
  type: ClusterIP
  selector:
    app: netbird
  ports:
    - name: http-grpc
      port: 443
      targetPort: http-grpc
---
apiVersion: v1
kind: Service
metadata:
  name: netbird-dashboard
  namespace: netbird
spec:
  type: ClusterIP
  selector:
    app: netbird
  ports:
    - name: http
      port: 80
      targetPort: dashboard-http
